CHANGE HISTORY
--------------------------------

1.9.0  6/01/10

Added a new service, StdQC, that offers a rudimentary data check.

Corrected error in rain year total if rain year does not start in January.


1.8.4  6/06/10

Fixed problem that shows itself if weewx starts up at precisely the beginning of
an archive interval. Symptom is max recursion depth exceeded. 

Units for UV in LOOP records corrected. Also, introduced new group for UV,
group_uv_index. Thanks to user A. Burriel for this fix!


1.8.3  5/20/10

Problem with configuring archive interval found and fixed by user A. Burriel
(thanks, Antonio!)


1.8.2   5/9/10

Added check to skip calibration for a type that doesn't exist in LOOP or archive
records. This allows windSpeed and windGust to be calibrated separately.


1.8.1   5/1/10

Ported to Cheetah V2.4.X


1.8.0   04/28/10

Added CWOP support.

Storage of LOOP and archive data into the SQL databases is now just another
service, StdArchive.

Added a calibration service, StdCalibrate, that can correct LOOP and archive
data.

Average console battery voltage is now calculated from LOOP data, and saved to
the archive as 'consBatteryVoltage'.

Transmitter battery status is now ORd together from LOOP data, and saved to the
archive as 'txBatteryStatus'.

Added stack tracebacks for unrecoverable exceptions.

Added a wrapper to the serial port in the VantagePro code. When used in a Python
"with" statement, it automatically releases the serial port if an exception
happens, allowing a more orderly shutdown.

Offered some hints in the documentation on how to automount your VP2 when using
a USB connection.

Corrected error in units. getTargetType() that showed itself with when the
console memory was freshly cleared, then tried to graph something immediately.


1.7.0   04/15/10

Big update.

Reports now use skins for their "look or feel."  Options specific to the
presentation layer have been moved out of the weewx configuration file