@@ -29,7 +29,7 @@ debug = 1
 socket_timeout = 20
 
 # Current version
-version = 1.9.0a2
+version = 1.9.0a3
 
 ############################################################################################
 
@@ -58,6 +58,9 @@ version = 1.9.0a2
 
     # How often to check the clock on the weather station for drift (in seconds)
     clock_check = 14400
+    
+    # How much it can drift before we will correct it (in seconds):
+    max_drift = 5
     
     # Set to 1 (one) to cache LOOP data, otherwise zero. Most people
     # will want to set this to one unless you have a specialized application
@@ -106,9 +109,6 @@ version = 1.9.0a2
     
     # How many times to try before giving up:
     max_tries = 4
-    
-    # How much it can drift before we will correct it (in seconds):
-    max_drift = 5
     
     # What unit system to use on the station. 1=US Customary (the only one the VP
     # supports)
